添加新接口
添加createPlay接口创建播放窗口化。相应代码优化。

--- a/res/xml/plugin.xml
+++ b/res/xml/plugin.xml
@@ -6,7 +6,9 @@
         className="org.zywx.wbpalmstar.plugin.uexvideo.EUExVideo"
         uexName="uexVideo" >
         <method name="open" />
+        <method name="creatPlay" />
         <method name="record" />
+        <method name="removePlay" />
     </plugin>
      <plugin
         className="org.zywx.wbpalmstar.plugin.uexfilemgr.EUExFileMgr"
