修正接口错误
修正接口命名错误。

--- a/res/xml/plugin.xml
+++ b/res/xml/plugin.xml
@@ -6,7 +6,7 @@
         className="org.zywx.wbpalmstar.plugin.uexvideo.EUExVideo"
         uexName="uexVideo" >
         <method name="open" />
-        <method name="creatPlay" />
+        <method name="createPlay" />
         <method name="record" />
         <method name="removePlay" />
     </plugin>
