--- a/res/xml/plugin.xml
+++ b/res/xml/plugin.xml
@@ -6,9 +6,9 @@
         className="org.zywx.wbpalmstar.plugin.uexvideo.EUExVideo"
         uexName="uexVideo" >
         <method name="open" />
-        <method name="createPlay" />
+        <method name="openPlayer" />
         <method name="record" />
-        <method name="removePlay" />
+        <method name="closePlayer" />
     </plugin>
      <plugin
         className="org.zywx.wbpalmstar.plugin.uexfilemgr.EUExFileMgr"
