--- a/res/layout/plugin_video_player_main2.xml
+++ b/res/layout/plugin_video_player_main2.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/plugin_video_player_iv_close"
                 android:layout_width="50dip"
                 android:layout_height="50dip"
+                android:alpha="0.8"
                 android:src="@drawable/app_back" />
 
             <TextView
@@ -154,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
             <TextView
                 android:id="@+id/plugin_video_tv_none_wifi_tip"
                 android:layout_width="wrap_content"
@@ -208,17 +209,15 @@
 
         <SeekBar
             android:id="@+id/plugin_video_player_sb_timeline"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:layout_height="33dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_toLeftOf="@+id/plugin_video_player_tv_pass_time"
             android:layout_toRightOf="@id/plugin_video_player_play_pause"
             android:max="100"
             android:maxHeight="4dip"
-            android:paddingLeft="4dip"
-            android:paddingRight="4dip"
             android:progress="0"
+            android:splitTrack="false"
             android:progressDrawable="@drawable/plugin_video_seekbar_style"
             android:thumb="@drawable/plugin_video_seekbar_thumb_selector" />
 
@@ -269,7 +268,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             android:layout_marginLeft="5dip"
-            android:alpha="2.0"
+            android:alpha="0.8"
             android:background="@drawable/pre_lyric" />
 
         <TextView
@@ -287,6 +286,7 @@
             android:id="@+id/plugin_video_player_next"
             android:layout_width="50dip"
             android:layout_height="50dip"
+            android:alpha="0.8"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="5dip"
