--- a/uexVideo/res/drawable/plugin_video_seekbar_style.xml
+++ b/uexVideo/res/drawable/plugin_video_seekbar_style.xml
@@ -3,14 +3,14 @@
 
 	<item android:id="@android:id/background">
 		<shape>
-			<solid android:color="#666666" />
+			<solid android:color="#adb3b9" />
 		</shape>
 	</item>
 	
 	<item android:id="@android:id/secondaryProgress">
 		<clip>
 			<shape>
-				<solid android:color="#666666" />
+				<solid android:color="#adb3b9" />
 			</shape>
 		</clip>
 	</item>
@@ -18,7 +18,7 @@
 	<item android:id="@android:id/progress">
 		<clip>
 			<shape>
-				<solid android:color="#ffffff" />
+				<solid android:color="#174e70" />
 			</shape>
 		</clip>
 	</item>
